@@ -322,7 +322,7 @@ API_SRID = 4326
 
 SNAP_DISTANCE = 30  # Distance of snapping in pixels
 
-PROFILE_MAXSIZE = 100  # Maximum number of points in an altimetric profile
+ALTIMETRIC_PROFILE_PRECISION = 20  # Sampling precision in meters
 
 # Let this be defined at instance-level
 LEAFLET_CONFIG = {
