@@ -274,7 +274,7 @@ class Trek(PicturesMixin, MapEntityMixin, Topology):
     def elevation_profile(self):
         if not self.geom:
             return []
-        return elevation_profile(self.geom, maxitems=settings.PROFILE_MAXSIZE)
+        return elevation_profile(self.geom)
 
     @property
     def name_display(self):
