@@ -7,6 +7,12 @@ CHANGELOG
 
 * Add pretty trek duration in JSON
 * Add information desk field in Trek (fixes #624)
+* Altimetric profiles are now computed in PostGIS.
+
+:notes:
+
+    Setting ``PROFILE_MAXSIZE`` was replaced by ``ALTIMETRIC_PROFILE_PRECISION`` which 
+    controls sampling precision in meters (default: 20 meters)
 
 
 0.17 (2013-05-17)
